@@ -4,6 +4,7 @@ PostGIS 1.0.6CVS
 	- Fixed bbox cache handling bugs
 	- Fixed geom_accum(NULL, NULL) segfault
 	- Initial support for postgresql 8.2
+	- Fixed segfault in addPoint()
 
 PostGIS 1.0.5
 2005/11/25
